# pref_voting

./: .gitignore  pyproject.toml  readme.md  setup.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
docs/: requirements.txt
docs/source/: conf.py  edata_overview.md  generate_weighted_majority_graphs.md  profiles_overview.md
pref_voting/: generate_profiles.py  helper.py  profiles_with_ties.py
pref_voting.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
